@@ -49,15 +49,6 @@ namespace Com.Christoc.MultiFunction {
         protected global::System.Web.UI.UserControl dnnBREADCRUMB;
         
         /// <summary>
-        /// dnnUSER control.
-        /// </summary>
-        /// <remarks>
-        /// Auto-generated field.
-        /// To modify move field declaration from designer file to code-behind file.
-        /// </remarks>
-        protected global::System.Web.UI.UserControl dnnUSER;
-        
-        /// <summary>
         /// dnnLOGIN control.
         /// </summary>
         /// <remarks>
@@ -65,6 +56,15 @@ namespace Com.Christoc.MultiFunction {
         /// To modify move field declaration from designer file to code-behind file.
         /// </remarks>
         protected global::System.Web.UI.UserControl dnnLOGIN;
+        
+        /// <summary>
+        /// dnnUSER control.
+        /// </summary>
+        /// <remarks>
+        /// Auto-generated field.
+        /// To modify move field declaration from designer file to code-behind file.
+        /// </remarks>
+        protected global::System.Web.UI.UserControl dnnUSER;
         
         /// <summary>
         /// TopPane control.
